<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/length_4">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/length_2"
                tools:src="@drawable/aquaman"
                android:contentDescription="@string/movie_details_image_description"/>

            <TextView
                android:id="@+id/releaseDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintLeft_toRightOf="@id/image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/length_4"
                android:layout_marginStart="@dimen/length_4"
                android:layout_marginLeft="@dimen/length_4"
                tools:text="@string/release_date_label"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/ratingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/releaseDateTV"
                app:layout_constraintLeft_toRightOf="@id/image"
                app:layout_constraintStart_toEndOf="@id/image"
                android:layout_marginTop="@dimen/length_2"
                android:layout_marginStart="@dimen/length_4"
                android:layout_marginLeft="@dimen/length_4"
                tools:text="@string/rating_label"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/length_4"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                tools:text="@string/title_label"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/synopsisTV"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleTV"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/length_2"
                tools:text="@string/lorem_ipsum_label"
                android:textSize="15sp"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/length_0"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/synopsisTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/length_6"
                />

            <TextView
                android:id="@+id/trailerLabel"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/length_4"
                android:text="@string/trailers_label"
                tools:text="@string/trailers_label"
                android:textSize="25sp"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailerRV"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/trailerLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/length_4"
                />

            <TextView
                android:id="@+id/reviewLabel"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/trailerRV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/length_4"
                android:text="@string/review_label"
                tools:text="@string/review_label"
                android:textSize="25sp"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewRV"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/reviewLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/length_4"
                />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
